be/src/runtime/query-state.cc
@@ -51,7 +51,7 @@ QueryState::ScopedRef::~ScopedRef() {
 
 QueryState::QueryState(const TQueryCtx& query_ctx, const string& request_pool)
   : query_ctx_(query_ctx),
-    initial_reservation_refcnt_(0),
+    exec_resource_refcnt_(0),
     refcnt_(0),
     is_cancelled_(0),
     query_spilled_(0) {
@@ -74,31 +74,39 @@ QueryState::QueryState(const TQueryCtx& query_ctx, const string& request_pool)
   InitMemTrackers();
 }
 
-void QueryState::ReleaseResources() {
-  DCHECK(!released_resources_);
+void QueryState::ReleaseExecResources() {
+  DCHECK(!released_exec_resources_);
   // Clean up temporary files.
   if (file_group_ != nullptr) file_group_->Close();
   // Release any remaining reservation.
   if (initial_reservations_ != nullptr) initial_reservations_->ReleaseResources();
   if (buffer_reservation_ != nullptr) buffer_reservation_->Close();
-  if (query_mem_tracker_ != nullptr) {
-    // No more tracked memory should be used by the query after this point, so we can
-    // close the MemTracker and remove the whole query subtree of MemTrackers from the
-    // global tree. After this point nothing should be touching this query's MemTrackers
-    // and they can be safely destroyed.
-    query_mem_tracker_->CloseAndUnregisterFromParent();
-  }
   if (desc_tbl_ != nullptr) desc_tbl_->ReleaseResources();
-  released_resources_ = true;
+  // At this point query execution should not be consuming any resources but some tracked
+  // memory may still be used by the ClientRequestState for result caching. The query
+  // MemTracker will be closed later when this QueryState is torn down.
+  released_exec_resources_ = true;
 }
 
 QueryState::~QueryState() {
-  DCHECK(released_resources_);
   DCHECK_EQ(refcnt_.Load(), 0);
-  DCHECK_EQ(initial_reservation_refcnt_.Load(), 0);
+  DCHECK_EQ(exec_resource_refcnt_.Load(), 0);
+  DCHECK(released_exec_resources_);
+  if (query_mem_tracker_ != nullptr) {
+    // Disconnect the query MemTracker hierarchy from the global hierarchy. After this
+    // point nothing must touch this query's MemTracker and all tracked memory associated
+    // with the query must be released. The whole query subtree of MemTrackers can
+    // therefore be safely destroyed.
+    query_mem_tracker_->CloseAndUnregisterFromParent();
+  }
 }
 
 Status QueryState::Init(const TExecQueryFInstancesParams& rpc_params) {
+  // Decremented in QueryExecMgr::StartQueryHelper() on success or by the caller of
+  // Init() on failure. We need to do this before any returns because Init() always
+  // returns a resource refcount to its caller.
+  AcquireExecResourceRefcount();
+
   // Starting a new query creates threads and consumes a non-trivial amount of memory.
   // If we are already starved for memory, fail as early as possible to avoid consuming
   // more resources.
@@ -129,8 +137,6 @@ Status QueryState::Init(const TExecQueryFInstancesParams& rpc_params) {
       rpc_params.initial_reservation_total_claims));
   RETURN_IF_ERROR(
       initial_reservations_->Init(query_id(), rpc_params.min_reservation_bytes));
-  DCHECK_EQ(0, initial_reservation_refcnt_.Load());
-  initial_reservation_refcnt_.Add(1); // Decremented in QueryExecMgr::StartQueryHelper().
   return Status::OK();
 }
 
@@ -278,7 +284,7 @@ void QueryState::StartFInstances() {
   VLOG_QUERY << "StartFInstances(): query_id=" << PrintId(query_id())
       << " #instances=" << rpc_params_.fragment_instance_ctxs.size();
   DCHECK_GT(refcnt_.Load(), 0);
-  DCHECK_GT(initial_reservation_refcnt_.Load(), 0) << "Should have been taken in Init()";
+  DCHECK_GT(exec_resource_refcnt_.Load(), 0) << "Should have been taken in Init()";
 
   // set up desc tbl
   DCHECK(query_ctx().__isset.desc_tbl);
@@ -308,8 +314,8 @@ void QueryState::StartFInstances() {
         new FragmentInstanceState(this, *fragment_ctx, instance_ctx));
 
     // start new thread to execute instance
-    refcnt_.Add(1);  // decremented in ExecFInstance()
-    initial_reservation_refcnt_.Add(1);  // decremented in ExecFInstance()
+    refcnt_.Add(1); // decremented in ExecFInstance()
+    AcquireExecResourceRefcount(); // decremented in ExecFInstance()
     string thread_name = Substitute(
         "exec-finstance (finst:$0)", PrintId(instance_ctx.fragment_instance_id));
     unique_ptr<Thread> t;
@@ -319,7 +325,7 @@ void QueryState::StartFInstances() {
       // Undo refcnt increments done immediately prior to Thread::Create(). The
       // reference counts were both greater than zero before the increments, so
       // neither of these decrements will free any structures.
-      ReleaseInitialReservationRefcount();
+      ReleaseExecResourceRefcount();
       ExecEnv::GetInstance()->query_exec_mgr()->ReleaseQueryState(this);
       break;
     }
@@ -352,10 +358,15 @@ void QueryState::StartFInstances() {
   }
 }
 
-void QueryState::ReleaseInitialReservationRefcount() {
-  int32_t new_val = initial_reservation_refcnt_.Add(-1);
+void QueryState::AcquireExecResourceRefcount() {
+  DCHECK(!released_exec_resources_);
+  exec_resource_refcnt_.Add(1);
+}
+
+void QueryState::ReleaseExecResourceRefcount() {
+  int32_t new_val = exec_resource_refcnt_.Add(-1);
   DCHECK_GE(new_val, 0);
-  if (new_val == 0) initial_reservations_->ReleaseResources();
+  if (new_val == 0) ReleaseExecResources();
 }
 
 void QueryState::ExecFInstance(FragmentInstanceState* fis) {
@@ -374,7 +385,7 @@ void QueryState::ExecFInstance(FragmentInstanceState* fis) {
   // initiate cancellation if nobody has done so yet
   if (!status.ok()) Cancel();
   // decrement refcount taken in StartFInstances()
-  ReleaseInitialReservationRefcount();
+  ReleaseExecResourceRefcount();
   // decrement refcount taken in StartFInstances()
   ExecEnv::GetInstance()->query_exec_mgr()->ReleaseQueryState(this);
 }
